fixed font size issue on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,7 @@
 */
 
 body {
-    font: 1.8em sans-serif;
+    font: 18px sans-serif;
     background-color: #FFF8DC;
     color: #001428;
     overflow-y: scroll;
@@ -44,7 +44,7 @@ body {
 }
 
 .info {
-    font-size: 0.8em;
+    font-size: 14px;
 }
 
 /*To be used on light blue color background*/
@@ -74,7 +74,7 @@ body {
 
 /*Small font size*/
 .small-note {
-    font-size: 0.8em;   
+    font-size: 14px;   
 }
 /*END*/
 
@@ -223,7 +223,7 @@ a:active {
     bottom: 0px;
     width: 100%;
     /*height: 25px;*/
-    font-size: 0.8em;
+    font-size: 14px;
 }
 
 .search-bar {
@@ -242,7 +242,7 @@ a:active {
     border: 1px solid #003366;
     border-radius: 15px;
     background-color: #ffffff;
-    font-size: 0.8em;
+    font-size: 14px;
     font-weight: bold;
     display: inline-block;
     line-height: 0px;
@@ -277,7 +277,7 @@ a:active {
 
 .btn-normal {
     border-color: #dde4ea;
-    /*font-size: 1em;*/
+    /*font-size: 16px;*/
     color: #1F1209;
     background-color: #BCC9D6;
     -webkit-box-shadow: inset 0 3px 5px rgba(208,217,226, 1);
@@ -323,7 +323,7 @@ a:active {
     width: 100%;
     font-family: sans-serif;
     color: #1F1209;
-    font-size: 0.8em;
+    font-size: 14px;
     background-color: #ffffff;
     opacity: 0.80;
     border: 1px solid #ffffff;
@@ -335,7 +335,7 @@ a:active {
 .form-style:active {
     width: 100%;
     color: #1F1209;
-    font-size: 0.8em;
+    font-size: 14px;
     background-color: #ffffff;
     border: 1px solid #ffffff;
     outline: 0;
@@ -394,7 +394,7 @@ a:active {
     border: none;
 }
     #menu a {
-        font: 1em sans-serif;
+        font: 16px sans-serif;
         font-weight: 100;
         border-bottom: 1px solid #7f99b2;
         color: #99adc1;
@@ -409,7 +409,7 @@ a:active {
     #menu .pure-menu li a:hover,
     #menu .pure-menu li a:focus {
         background: #FFF8DC;
-        font-size: 1em;
+        font-size: 16px;
         color: #003366;
     }
 
@@ -426,7 +426,7 @@ a:active {
 .select-control {
     width: 100%;
     font-family: sans-serif;
-    font-size: 1em;
+    font-size: 16px;
     color: #1F1209;
     background-color: #FAF9E6;
     border: 1px solid #ffffff;
@@ -442,7 +442,7 @@ a:active {
 .select-control:active {
     width: 100%;
     color: #1F1209;
-    font-size: 1em;
+    font-size: 16px;
     background-color: #FAF9E6;
     border: 1px solid #ffffff;
     outline: 0;
